# CSInternal

./: .gitignore  CMakeLists.txt  CMakePresets.json  CSInternal.sln  README.md  vcpkg.json
Architecture/: Architecture.vcxproj  Architecture.vcxproj.filters  CMakeLists.txt  vcpkg.json
Architecture/include/Architecture/: GUI.hpp  IHook.hpp  function_hook.hpp  function_traits.hpp  hook_group.hpp  hook_handle.hpp
Architecture/src/: GUI.cpp  IHook.cpp  Math.cpp  framework.h  function_hook.cpp  hook_group.cpp  main.cpp
Core/: CMakeLists.txt  Core.vcxproj  dllmain.cpp
Core/src/: main.cpp
